Fix and extend handling the KML extrude tag

BUG: 332260
REVIEW: 117459