src/lib/marble/geodata/writers/kml/KmlLineStringTagWriter.cpp
@@ -6,6 +6,7 @@
 // the source code.
 //
 // Copyright 2010      Dennis Nienhüser <earthwings@gentoo.org>
+// Copyright 2014      Marek Hakala <hakala.marek@gmail.com>
 //
 
 #include "KmlLineStringTagWriter.h"
@@ -30,6 +31,7 @@ bool KmlLineStringTagWriter::write( const GeoNode *node, GeoWriter& writer ) con
     if ( lineString->size() > 1 )
     {
         writer.writeStartElement( kml::kmlTag_LineString );
+        writer.writeOptionalElement( kml::kmlTag_extrude, QString::number( lineString->extrude() ), "0" );
         writer.writeStartElement( "coordinates" );
 
         // Write altitude for *all* elements, if *any* element
